feat(security): add security guidelines, validation, and GitHub integration
- Introduced SECURITY.md with detailed security guidelines
- Added token validation, input sanitization, and rate limiting
- Implemented security headers and error handling improvements
- Enhanced GitHub API integration with scoped token checks
- Updated .env.example with GitHub token placeholder
- Updated .gitignore to exclude sensitive files
- Added necessary dependencies for security and GitHub API access
- Implemented secure file system access and directory traversal protection

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ DEFAULT_PROVIDER=openai
 # Default Model
 DEFAULT_MODEL=gpt-4
 
+# GitHub Configuration
+GITHUB_TOKEN=your_github_personal_access_token_here
+
 # Agent Configuration
 MAX_TOKENS=4096
 TEMPERATURE=0.7
