--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "ink-spinner": "^5.0.0",
     "commander": "^11.1.0",
     "openai": "^4.20.1",
-    "anthropic": "^0.9.1",
+    "@anthropic-ai/sdk": "^0.27.0",
+    "@octokit/rest": "^20.0.2",
+    "@octokit/auth-token": "^4.0.0",
     "glob": "^10.3.10",
     "fs-extra": "^11.2.0",
     "chalk": "^4.1.2",
